src/ui/snapshots/coxtop__ui__slipstream__tests__card_end_kinds_in_the_harbor_light_theme.snap
---
source: src/ui/slipstream.rs
assertion_line: 943
expression: "end_kinds_text(ThemeId::HarborLight)"
---
coxtop
R U N S
╭──────────────────────────────────────────────────────────────────────────────╮
│alpha-1 ● running                                                        $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│bravo-1 ● landed                                                         $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│charlie-1 ● approved                                                     $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│delta-1 ● quarantined budget stop                                        $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│echo-1 ● idle                                                            $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│foxtrot-1 ● died chair gone                                              $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│golf-1 ● stopped                                                         $1.50│
│omarchy p1   plan   build   handoff   review   arbitrate   land               │
╰──────────────────────────────────────────────────────────────────────────────╯



↑↓ select   enter open   esc close   tab page   t theme   q quit   p pause  k ki
