src/ui/snapshots/coxtop__ui__slipstream__tests__renders_slipstream_snapshot_in_the_regatta_theme.snap
---
source: src/ui/slipstream.rs
assertion_line: 837
expression: "snapshot_text(ThemeId::Regatta, 120, 40)"
---
coxtop                                                                                           Tue Sep 29 00:00 v1.2.3
R U N S                                                                         S P E N D
╭──────────────────────────────────────────────────────────────────────────────╮5h █████░░░░░░░░░░░░░░░░░░░░░░░░░░░  16%
│dash-feed-1                                                              $0.84│wk ███████████░░░░░░░░░░░░░░░░░░░░░  35%
│omarchy p1-foundations   plan   build   handoff   review   arbitrate   land   │
╰──────────────────────────────────────────────────────────────────────────────╯M A C H I N E S
╭──────────────────────────────────────────────────────────────────────────────╮╭──────────────────────────────────────╮
│dash-feed-2                                                              $0.00││omarchy                            2/3│
│omarchy p1-foundations   plan   build   handoff   review   arbitrate   land   ││████████████ ████████████ ░░░░░░░░░░░░│
╰──────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────╯
                                                                                I N B O X
                                                                                needs_chair some-task
                                                                                  budget stop after 2 attempts




















                                                                                C H A I R
                                                                                ╭──────────────────────────────────────╮
                                                                                │● chair@omarchy:12345 @ omarchy       │
                                                                                │2 lands today · beat 4s               │
                                                                                │                                      │
                                                                                ╰──────────────────────────────────────╯
↑↓ select   enter open   esc close   tab page   t theme   q quit   p pause  k kill  m move   : palette
