src/ui/snapshots/coxtop__ui__slipstream__tests__the_key_row_snapshot.snap
---
source: src/ui/slipstream.rs
assertion_line: 794
expression: row.trim_end()
---
↑↓ select   enter open   esc close   tab page   t theme   q quit   p pause  k kill  m move   : palette   w watch  $ spend  h health
